vuejs/vuejs-tests/testData/service/hybrid/diagnostics/typeErrorInScriptSetup/App.vue
<script setup lang="ts">
const msg: string = 123
</script>
<template>{{ msg }}</template>
